--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "expo-font": "~14.0.8",
     "expo-haptics": "~15.0.7",
     "expo-image": "~3.0.8",
+    "expo-linear-gradient": "~15.0.7",
     "expo-linking": "~8.0.8",
+    "expo-localization": "^17.0.7",
     "expo-router": "~6.0.10",
     "expo-splash-screen": "~31.0.10",
     "expo-status-bar": "~3.0.8",
@@ -29,13 +31,16 @@
     "expo-system-ui": "~6.0.7",
     "expo-web-browser": "~15.0.8",
     "firebase": "^12.5.0",
+    "i18next": "^25.6.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-i18next": "^16.2.4",
     "react-native": "0.81.4",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
+    "react-native-svg": "15.12.1",
     "react-native-web": "~0.21.0",
     "react-native-worklets": "0.5.1"
   },
