--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-navigation/native": "^7.1.8",
     "expo": "~54.0.12",
     "expo-camera": "~17.0.9",
+    "expo-clipboard": "~8.0.7",
     "expo-constants": "~18.0.9",
     "expo-file-system": "~19.0.17",
     "expo-font": "~14.0.8",
