--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "expo-router": "~6.0.10",
     "expo-sharing": "~14.0.7",
     "expo-splash-screen": "~31.0.10",
-    "expo-status-bar": "~3.0.8",
+  "expo-status-bar": "~3.0.8",
+  "expo-notifications": "~0.23.2",
     "expo-symbols": "~1.0.7",
     "expo-system-ui": "~6.0.7",
     "expo-web-browser": "~15.0.8",
