--- a/package.json
+++ b/package.json
@@ -11,8 +11,12 @@
     "lint": "expo lint"
   },
   "dependencies": {
+    "@expo-google-fonts/baloo-2": "^0.4.2",
+    "@expo-google-fonts/fredoka-one": "^0.2.3",
+    "@expo-google-fonts/quicksand": "^0.4.1",
     "@expo/vector-icons": "^15.0.2",
     "@radix-ui/react-dialog": "^1.1.15",
+    "@react-native-async-storage/async-storage": "2.2.0",
     "@react-navigation/bottom-tabs": "^7.4.0",
     "@react-navigation/elements": "^2.6.3",
     "@react-navigation/native": "^7.1.8",
@@ -27,15 +31,17 @@
     "expo-linear-gradient": "~15.0.7",
     "expo-linking": "~8.0.9",
     "expo-localization": "^17.0.7",
+    "expo-notifications": "~0.32.14",
     "expo-router": "~6.0.15",
     "expo-sharing": "~14.0.7",
-    "expo-splash-screen": "~31.0.11",
+    "expo-splash-screen": "~31.0.12",
     "expo-status-bar": "~3.0.8",
     "expo-symbols": "~1.0.7",
     "expo-system-ui": "~6.0.8",
     "expo-web-browser": "~15.0.9",
     "firebase": "^12.6.0",
     "i18next": "^25.6.1",
+    "lottie-react-native": "~7.3.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-i18next": "^16.2.4",
