--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "expo": "^54.0.26",
     "expo-av": "~16.0.8",
     "expo-camera": "~17.0.9",
+    "expo-clipboard": "~8.0.8",
     "expo-constants": "~18.0.9",
     "expo-file-system": "~19.0.19",
     "expo-font": "~14.0.8",
