--- a/package.json
+++ b/package.json
@@ -21,32 +21,32 @@
     "@react-navigation/elements": "^2.6.3",
     "@react-navigation/native": "^7.1.8",
     "@stripe/stripe-react-native": "0.50.3",
-    "expo": "^54.0.26",
+    "expo": "~54.0.30",
     "expo-av": "~16.0.8",
-    "expo-camera": "~17.0.9",
+    "expo-camera": "~17.0.10",
     "expo-clipboard": "~8.0.8",
     "expo-constants": "~18.0.9",
     "expo-file-system": "~19.0.19",
     "expo-font": "~14.0.8",
-    "expo-haptics": "~15.0.7",
-    "expo-image": "~3.0.10",
-    "expo-image-picker": "~17.0.8",
-    "expo-linear-gradient": "~15.0.7",
-    "expo-linking": "~8.0.9",
-    "expo-localization": "^17.0.7",
-    "expo-notifications": "~0.32.14",
-    "expo-router": "~6.0.15",
-    "expo-sharing": "~14.0.7",
-    "expo-splash-screen": "~31.0.12",
-    "expo-status-bar": "~3.0.8",
-    "expo-symbols": "~1.0.7",
-    "expo-system-ui": "~6.0.8",
-    "expo-web-browser": "~15.0.9",
+    "expo-haptics": "~15.0.8",
+    "expo-image": "~3.0.11",
+    "expo-image-picker": "~17.0.10",
+    "expo-linear-gradient": "~15.0.8",
+    "expo-linking": "~8.0.11",
+    "expo-localization": "~17.0.8",
+    "expo-notifications": "~0.32.15",
+    "expo-router": "~6.0.21",
+    "expo-sharing": "~14.0.8",
+    "expo-splash-screen": "~31.0.13",
+    "expo-status-bar": "~3.0.9",
+    "expo-symbols": "~1.0.8",
+    "expo-system-ui": "~6.0.9",
+    "expo-web-browser": "~15.0.10",
     "firebase": "^12.6.0",
     "i18next": "^25.6.1",
     "lottie-react-native": "~7.3.1",
-    "react": "^19.1.0",
-    "react-dom": "^19.2.3",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
     "react-i18next": "^16.2.4",
     "react-native": "0.81.5",
     "react-native-gesture-handler": "~2.28.0",
