--- a/app.json
+++ b/app.json
@@ -10,7 +10,12 @@
     "newArchEnabled": true,
     "ios": {
       "supportsTablet": true,
-      "bundleIdentifier": "com.tonnom.projectba"
+      "bundleIdentifier": "com.tonnom.projectba",
+      "infoPlist": {
+        "NSCameraUsageDescription": "GreenUp a besoin d'accéder à votre caméra pour prendre en photo vos défis.",
+        "NSPhotoLibraryUsageDescription": "GreenUp a besoin d'accéder à vos photos pour choisir une preuve.",
+        "NSMicrophoneUsageDescription": "GreenUp a besoin du micro pour enregistrer le son des vidéos de défis."
+      }
     },
     "android": {
       "adaptiveIcon": {
@@ -21,7 +26,14 @@
       },
       "edgeToEdgeEnabled": true,
       "predictiveBackGestureEnabled": false,
-      "package": "com.tonnom.projectba"
+      "package": "com.tonnom.projectba",
+      "permissions": [
+        "CAMERA",
+        "READ_EXTERNAL_STORAGE",
+        "WRITE_EXTERNAL_STORAGE",
+        "RECORD_AUDIO",
+        "NOTIFICATIONS"
+      ]
     },
     "web": {
       "output": "static",
@@ -45,13 +57,22 @@
       [
         "expo-camera",
         {
-          "cameraPermission": "GreenUp a besoin d'accéder à votre caméra pour vous permettre de prendre en photo vos défis écologiques."
+          "cameraPermission": "GreenUp a besoin d'accéder à votre caméra pour vous permettre de prendre en photo vos défis écologiques.",
+          "microphonePermission": "GreenUp a besoin d'accéder à votre micro pour les vidéos de défis."
         }
       ],
       [
         "expo-image-picker",
         {
           "photosPermission": "GreenUp a besoin d'accéder à vos photos pour vous permettre de sélectionner une preuve de défi depuis votre galerie."
+        }
+      ],
+      [
+        "expo-notifications",
+        {
+          "icon": "./assets/images/logo_G2_degradé-removebg-preview.png",
+          "color": "#008F6B",
+          "defaultChannel": "default"
         }
       ]
     ],
